# network-anomaly-detector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example
docker/prometheus/: prometheus.yml
docs/: DEPLOYMENT.md
src/anomaly_detector/: __init__.py  cli.py  config.py  metrics.py
src/anomaly_detector/alerts/: base.py  email.py  slack.py
src/anomaly_detector/api/: dependencies.py  main.py
src/anomaly_detector/collectors/: base.py
src/anomaly_detector/pipeline/: detection.py  enrichment.py  models.py  normalization.py  processor.py  queue.py
src/anomaly_detector/storage/: repository.py
tests/: test_api_anomalies.py  test_collector_flow.py  test_detection.py  test_enrichment.py  test_health.py  test_metrics.py  test_normalization.py  test_pipeline_integration.py  test_pipeline_processor.py
web/dashboard/: package-lock.json  package.json
web/dashboard/src/: App.tsx
