[tool.poetry]
name = "anomaly-detector"
version = "0.1.0"
description = "Real-time network anomaly detection platform with streaming ML, alerting, and dashboards."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "anomaly_detector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
redis = "^5.0.0"
aiokafka = "^0.10.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
httpx = "^0.27.0"
scikit-learn = "^1.5.0"
river = "^0.21.0"
pandas = "^2.2.0"
geopy = "^2.4.1"
structlog = "^24.1.0"
loguru = "^0.7.2"
numpy = "^1.26.0"
geoip2 = "^4.8.0"
jinja2 = "^3.1.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = { version = "^0.27.0", extras = ["cli"] }
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501", "E203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --disable-warnings"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true
source = ["anomaly_detector"]
